# freetypeharfbuzz

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NEWS.md  configure  cran-comments.md
R/: freetype.R  freetypeharfbuzz.R
inst/include/: freetypeharfbuzz.c  freetypeharfbuzz.h
man/: font_info.Rd
preinst/: Makefile  harfbuzz-pkgconfig.diff
src/: .gitignore  Makeapple  Makebuild  Makestatic.in  Makevars  Makevars.in  Makevars.win  font-info.c  font-info.h  freetype.c  freetype.h  harfbuzz.c  harfbuzz.h  init.c  r-interface.c  string-extents.c  string-info.c  string-info.h  utf8.c  width.c
tests/: testthat.R
tests/testthat/: helper-extents.R  test-extents.R  test-string-info.R
tools/: .gitignore  Makefile  download.sh  make-harfbuzz.sh  tar.sh  untar.sh  unzip.sh  winlibs.R
tools/config/: .gitignore  Makefile.in  configure  configure.ac
tools/diffs/: 0001-Undefine-HB_PRINTF_FUNC.patch  0005-Silence-gcc-warning.patch  0006-Remove-flags-causing-warnings-on-Solaris.patch  0007-Silence-Solaris-warnings-about-symbol-hiding.patch  harfbuzz-flag.diff
tools/diffs/freetype/: 0001-Remove-pragma-diagnostics.patch  0002-Remove-amiga-files.patch
tools/diffs/harfbuzz/: 0002-Remove-unnecessary-trailing-semi-colon.patch  0003-Initialise-offsets.patch  0004-Cast-to-void-before-memset.patch  0008-Reenable-CXX11.patch  harfbuzz-pkgconfig.diff
